--- a/src/app/features/ProyectoPage/ProyectoPage.html
+++ b/src/app/features/ProyectoPage/ProyectoPage.html
@@ -24,4 +24,5 @@
       }
     </ul>
   </div>
+  <listado-componnete listName="Listado de Proyecto" [proyectos]="proyectos()"></listado-componnete>
 </section>
