--- a/src/app/features/ProyectosPages2/ProyectosPages2.html
+++ b/src/app/features/ProyectosPages2/ProyectosPages2.html
@@ -4,7 +4,7 @@
 
 <app-add-proyecto 
     (newPRoyecto)="proyectosService.addProyecto($event)"
-
+    (removeProyecto)="proyectosService.removeProyecto()"
 >  
 
 </app-add-proyecto>
