--- a/src/app/features/share/nav-bar/nav-bar.html
+++ b/src/app/features/share/nav-bar/nav-bar.html
@@ -7,5 +7,6 @@
     <a [routerLink]="['/perfile']"   routerLinkActive="active">Perfile</a>
     <a [routerLink]="['/proyectoPage']"   routerLinkActive="active">proyectoPage</a>
     <a [routerLink]="['/proyectoPage2']"   routerLinkActive="active">Proyecto pages 2</a>
+    <a [routerLink]="['/formulario']" routerLinkActive="active">Formulario</a>
 
 </nav>
